DirectoryNotFoundException when MyIntegrationTests project is in a subfolder

--- a/Tests/MyIntegrationTests/MyIntegrationTests.csproj
+++ b/Tests/MyIntegrationTests/MyIntegrationTests.csproj
@@ -2,7 +2,6 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.0</TargetFramework>
-
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
@@ -47,7 +46,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\MyAPI\MyAPI.csproj" />
+    <ProjectReference Include="..\..\MyAPI\MyAPI.csproj" />
   </ItemGroup>
 
 </Project>
