Added DataBase + removed WebApplicationFactory from Test to go back to my original .net core 2.0  TestServerFixture like.

--- a/MyAPI/appsettings.Development.json
+++ b/MyAPI/appsettings.Development.json
@@ -1,9 +1,13 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
-    }
-  }
+	"ConnectionStrings": {
+		"Default": "Data Source=.;Initial Catalog=MyDB;Integrated Security=True;"
+	},
+
+	"Logging": {
+		"LogLevel": {
+			"Default": "Debug",
+			"System": "Information",
+			"Microsoft": "Information"
+		}
+	}
 }
