--- a/MyAPI/appsettings.json
+++ b/MyAPI/appsettings.json
@@ -1,10 +1,15 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  },
-  "AllowedHosts": "*"
+	"ConnectionStrings": {
+		"Default": "YOUR CONNECTION STRING"
+	},
+
+	"Logging": {
+		"LogLevel": {
+			"Default": "Information",
+			"Microsoft": "Warning",
+			"Microsoft.Hosting.Lifetime": "Information"
+		}
+	},
+
+	"AllowedHosts": "*"
 }
